cmake_minimum_required(VERSION 2.8)
project(C___Primer)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    "Chapter 1/1.1.c"
    "Chapter 1/1.10.c"
    "Chapter 1/1.11.c"
    "Chapter 1/1.12.cpp"
    "Chapter 1/1.13.a.cpp"
    "Chapter 1/1.13.b.cpp"
    "Chapter 1/1.15.cpp"
    "Chapter 1/1.16.cpp"
    "Chapter 1/1.17.cpp"
    "Chapter 1/1.19.cpp"
    "Chapter 1/1.2.c"
    "Chapter 1/1.20.cpp"
    "Chapter 1/1.23.cpp"
    "Chapter 1/1.3.c"
    "Chapter 1/1.4.c"
    "Chapter 1/1.5.c"
    "Chapter 1/1.6.c"
    "Chapter 1/1.7.c"
    "Chapter 1/1.8.c"
    "Chapter 1/1.9.c"
    "Chapter 1/ch1-bookstore.cpp"
    "Chapter 1/ch1-comments-example.c"
    "Chapter 1/ch1-for.cpp"
    "Chapter 1/ch1-if.cpp"
    "Chapter 1/ch1-member-functions.cpp"
    "Chapter 1/ch1-sales_item.cpp"
    "Chapter 1/ch1-unknown-input.cpp"
    "Chapter 1/ch1-while.c"
    "Chapter 1/Sales_item.h"
    "Chapter 2/2.13.cpp"
    "Chapter 2/2.14.cpp"
    "Chapter 2/2.16.cpp"
    "Chapter 2/2.17.cpp"
    "Chapter 2/2.18.cpp"
    "Chapter 2/2.20.cpp"
    "Chapter 2/2.21.cpp"
    "Chapter 2/2.23.cpp"
    "Chapter 2/2.24.cpp"
    "Chapter 2/2.27.cpp"
    "Chapter 2/2.28.cpp"
    "Chapter 2/2.3.cpp"
    "Chapter 2/2.30.cpp"
    "Chapter 2/2.32.cpp"
    "Chapter 2/2.33.cpp"
    "Chapter 2/2.36.cpp"
    "Chapter 2/2.37.cpp"
    "Chapter 2/2.38.cpp"
    "Chapter 2/2.39.cpp"
    "Chapter 2/2.5.cpp"
    "Chapter 2/2.6.cpp"
    "Chapter 2/2.8.cpp"
    "Chapter 2/Sales_data_ar.h"
    "Chapter 3/3.2.cpp"
    "Chapter 3/3.4.cpp"
    "Chapter 3/3.5.cpp"
    "Chapter 3/3.6.cpp"
    "Chapter 3/change_char_in_range.cpp"
    "Chapter 3/getline.cpp"
    "Chapter 3/ispunct.cpp"
    "Chapter 3/meat.cpp"
    "Chapter 3/print_empty_lines.cpp"
    "Chapter 3/range.cpp"
    "Chapter 3/read_arbitrary_number_of_strings.cpp"
    "Chapter 3/subscript.cpp")

add_executable(C___Primer ${SOURCE_FILES})